[gd_scene load_steps=4 format=3 uid="uid://yr0ymo6g1wyu"]

[ext_resource type="Script" path="res://UIObjects/InventoryUI/ItemDominos/ItemDomino.gd" id="1_fgymh"]
[ext_resource type="PackedScene" uid="uid://c85xbk2ufhwoh" path="res://UIObjects/InventoryUI/ItemDominos/ItemDominoGrid.tscn" id="2_w7ap4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhuwh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.568627, 0.917647, 1, 1)

[node name="ItemDomino" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fgymh")

[node name="ItemDominoGrid" parent="." instance=ExtResource("2_w7ap4")]
modulate = Color(0.733333, 0.733333, 0.733333, 1)
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="ItemDominoGrid"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="EquippedAesthetics" type="Panel" parent="ItemDominoGrid/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jhuwh")

[node name="ItemDominoImageMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="ItemDominoImage" type="TextureRect" parent="ItemDominoImageMargin"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -28.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="QuantityText" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.113725, 0.113725, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2
